# condor-cli

./: Cargo.toml  README.md  flake.nix
src/: config.rs  lib.rs  main.rs
src/config/: cli.rs  mod.rs
