[package]
name = "condor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
log = "0.4.22"
playback-rs = "0.4.4"
rand = "0.8.5"
regex = "1.10.4"
reqwest = { version = "0.12.7", features = ["blocking"] }
simplelog = "0.12.2"
time = "0.3.36"
