[package]
name = "condor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["cargo"] }
log = "0.4.22"
playback-rs = "0.4.4"
rand = "0.8.5"
regex = "1.10.4"
reqwest = { version = "0.12.7", features = ["blocking"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
simplelog = "0.12.2"
time = "0.3.36"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
